--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,57 @@
 /* Add CSS styling here */
+*{
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+    border:1px solid grey;
+    }
+    
+    html{
+    /* min-width: 880px;
+    max-width: 930px;
+    margin: 0 auto; */
+    font-size:62.5%;
+    }
+    
+    body {
+    font-size: 1.6rem;
+    }
+    
+/* header css */
+
+header {
+    display: flex; 
+    justify-content: space-between;
+    margin: 2rem;
+}
+
+header p {
+    font-size: 3rem;
+}
+
+header nav {
+    width: 33%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+header nav a {
+    display: flex;
+    width:25%;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+/* Banner section */
+
+#banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section div {
+    width: 80%;
+}
