--- a/style/index.css
+++ b/style/index.css
@@ -28,6 +28,16 @@ header {
 
 header p {
     font-size: 3rem;
+    color: black;
+}
+
+header p:hover {
+    font-size: 3.2rem;
+    transition: .4s;
+}
+
+header a {
+    text-decoration: none;
 }
 
 header nav {
@@ -41,8 +51,15 @@ header nav a {
     width:25%;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
+    /* text-decoration: none; */
     border: 1px solid black;
+    color: black;
+}
+
+header nav a:hover {
+    background-color: black;
+    color: white;
+    transition: .7s;
 }
 
 /* Banner section */
@@ -60,7 +77,7 @@ header nav a {
     background-repeat: no-repeat;
     overflow: hidden;
     width: 80%;
-    height: 40vh;
+    height: 45vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,9 +86,9 @@ header nav a {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 7rem;
     color: White;
-    margin: 1.5rem;
+    margin-bottom: 1rem;
     text-shadow: 2px 2px 5px black;
 }
 
@@ -81,22 +98,28 @@ h1 {
     padding: 1rem 2rem;
     text-decoration: none;
     color: black;
-    border: 2px solid black;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 5px 5px 7px black;
+}
+
+#banner a:hover {
+    background-color: black;
+    color: white;
+    box-shadow: none;
+    transition: .6s;
 }
 
 /* showcase */
 #showcase {
     display: flex;
     justify-content: center;
-    margin: 2rem;
+    margin: 3rem 2rem;
 }
 
 
 .container {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-flow: row wrap;
 }
 
@@ -105,6 +128,13 @@ h1 {
     min-width: 300px;
     text-align: center;
 }
+
+.container div img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
 
 .container div p {
     margin-bottom: 2rem;
@@ -128,7 +158,12 @@ footer a {
     padding: 1rem 2rem;
     text-decoration: none;
     color: black;
-    border: 2px solid black;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 5px 5px 7px black;
 }
 
+footer a:hover {
+    background-color: black;
+    box-shadow: none;
+    color: white;
+    transition: .6s;
+}
