--- a/style/index.css
+++ b/style/index.css
@@ -8,10 +8,11 @@
     }
     
     html{
-    /* min-width: 880px;
-    max-width: 930px;
-    margin: 0 auto; */
+    /* min-width: 880px; */
+    max-width: 1080px;
+    margin: 0 auto;
     font-size:62.5%;
+    font-family: 'Roboto Mono', monospace;
     }
     
     body {
@@ -41,7 +42,7 @@ header a {
 }
 
 header nav {
-    width: 33%;
+    width: 40%;
     display: flex;
     justify-content: flex-end;
 }
@@ -62,12 +63,18 @@ header nav a:hover {
     transition: .7s;
 }
 
+.active {
+    background: black;
+    color: white;
+}
+
 /* Banner section */
 
 #banner {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 #banner div {
@@ -83,10 +90,11 @@ header nav a:hover {
     justify-content: center;
     align-items: center;
     min-height: 200px;
+    box-shadow: 5px 5px 7px black;
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 9rem;
     color: White;
     margin-bottom: 1rem;
     text-shadow: 2px 2px 5px black;
@@ -116,17 +124,26 @@ h1 {
 }
 
 
-.container {
+.container  {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     flex-flow: row wrap;
 }
 
-.container div {
+.container a {
     max-width: 30%;
     min-width: 300px;
     text-align: center;
+    margin-bottom: 2rem;
+    box-shadow: 5px 5px 7px black;
+    text-decoration: none;
+    color: black;
+}
+
+.container a:hover {
+    transform: scale(1.1);
+    transition: .3s;
 }
 
 .container div img {
@@ -137,7 +154,7 @@ h1 {
 
 
 .container div p {
-    margin-bottom: 2rem;
+    padding: .5rem;
 }
 
 
@@ -145,11 +162,12 @@ h1 {
 /* footer */
 footer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 10vh;
-    min-height: 100px;
-    background-color: rgb(220, 219, 245);
+    /* height: 20vh; */
+    min-height: 180px;
+    background-color: silver;
 }
 
 footer a {
@@ -167,3 +185,22 @@ footer a:hover {
     color: white;
     transition: .6s;
 }
+
+footer div a {
+    margin: 2rem;
+    background-color: transparent;
+    padding: 0;
+    font-size: 4rem;
+    box-shadow: none;
+}
+
+footer div a:hover {
+    transform: scale(1.3);
+    background-color: transparent;
+}
+
+#contact-button {
+    margin-top: 2rem;
+}
+
+
