--- a/style/index.css
+++ b/style/index.css
@@ -17,6 +17,7 @@
     
     body {
     font-size: 1.6rem;
+    background-image: url(/images/photo-1483959651481-dc75b89291f1.jpg);
     }
     
 /* header css */
@@ -30,6 +31,7 @@ header {
 header p {
     font-size: 3rem;
     color: black;
+    text-shadow: 2px 2px 5px white);
 }
 
 header p:hover {
@@ -138,7 +140,8 @@ h1 {
     margin-bottom: 2rem;
     box-shadow: 5px 5px 7px black;
     text-decoration: none;
-    color: black;
+    color: white;
+    background-color: slategray;
 }
 
 .container a:hover {
@@ -167,7 +170,12 @@ footer {
     align-items: center;
     /* height: 20vh; */
     min-height: 180px;
-    background-color: silver;
+    background-color: slategray;
+    /* background-image: url(/images/photo-1489844097929-c8d5b91c456e.jpeg);
+    background-position: top;
+    background-repeat: no-repeat;
+    width: 100%;
+    background-size: cover; */
 }
 
 footer a {
@@ -197,6 +205,7 @@ footer div a {
 footer div a:hover {
     transform: scale(1.3);
     background-color: transparent;
+    color: white
 }
 
 #contact-button {
