--- a/style/index.css
+++ b/style/index.css
@@ -31,7 +31,7 @@ header {
 header p {
     font-size: 3rem;
     color: black;
-    text-shadow: 2px 2px 5px white);
+    text-shadow: 2px 2px 4px white;
 }
 
 header p:hover {
@@ -213,3 +213,39 @@ footer div a:hover {
 }
 
 
+@media (max-width:850px) {
+    header nav a {
+        font-size: 1.3rem;
+    }
+
+    h1 {
+        font-size: 6rem;
+    }
+}
+
+
+@media (max-width:700px) {
+    header {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+    }
+    header nav {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    header nav a {
+        width: 100%;
+        font-size: 1.6rem;
+        padding: 1rem;
+    }
+
+
+    h1 {
+        font-size: 4rem;
+    }
+}
