--- a/style/index.css
+++ b/style/index.css
@@ -178,6 +178,7 @@ footer {
     background-repeat: no-repeat;
     width: 100%;
     background-size: cover; */
+    
 }
 
 footer a {
@@ -215,18 +216,27 @@ footer div a:hover {
 }
 
 
-@media (max-width:850px) {
-    header nav a {
-        font-size: 1.3rem;
-    }
+/* media queries */
 
+
+@media (max-width:800px) {
+    header nav a {
+        font-size: 1.2rem;
+        padding: .5rem 3rem;
+    }
     h1 {
         font-size: 6rem;
+    }
+    .container a {
+        min-width: 45%;
+    }
+    #banner div {
+        width: 90%;
     }
 }
 
 
-@media (max-width:700px) {
+@media (max-width:500px) {
     header {
         width: 100%;
         flex-direction: column;
@@ -241,11 +251,21 @@ footer div a:hover {
         align-items: center;
     }
     header nav a {
-        width: 100%;
+        width: 50%;
         font-size: 1.6rem;
         padding: 1rem;
     }
     h1 {
+        font-size: 5rem;
+    }
+    #banner div {
+        height: 30vh;
+    }
+    header {
+        margin: 2rem 0;
+    }
+    header a p {
         font-size: 4rem;
+        margin-bottom: .5rem;
     }
 }
