--- a/style/index.css
+++ b/style/index.css
@@ -137,7 +137,7 @@ h1 {
 
 .container a {
     max-width: 30%;
-    min-width: 300px;
+    /* min-width: 300px; */
     text-align: center;
     margin-bottom: 2rem;
     box-shadow: 5px 5px 7px black;
@@ -232,6 +232,7 @@ footer div a:hover {
     }
     #banner div {
         width: 90%;
+        height: 40vh;
     }
     header a p {
         font-size: 2.8rem;
